# yew-app

./: Cargo.toml
src/: main.rs  vid.rs
