[package]
name = "yew-app"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    yew = "0.19"
    gloo-net = { version="0.2", features = ["json"]}
    serde = { version = "1.0", features = ["derive"] }
    wasm-bindgen-futures = "0.4"

